# cpe471

./: .gitignore  main.cpp
CMake_binaries/: CMakeCache.txt  cmake_install.cmake  launch-misc05_picking_BulletPhysics-Debug.sh  launch-misc05_picking_BulletPhysics-MinSizeRel.sh  launch-misc05_picking_BulletPhysics-RelWithDebInfo.sh  launch-misc05_picking_BulletPhysics-Release.sh  launch-misc05_picking_custom-Debug.sh  launch-misc05_picking_custom-MinSizeRel.sh  launch-misc05_picking_custom-RelWithDebInfo.sh  launch-misc05_picking_custom-Release.sh  launch-misc05_picking_slow_easy-Debug.sh  launch-misc05_picking_slow_easy-MinSizeRel.sh  launch-misc05_picking_slow_easy-RelWithDebInfo.sh  launch-misc05_picking_slow_easy-Release.sh  launch-playground-Debug.sh  launch-playground-MinSizeRel.sh  launch-playground-RelWithDebInfo.sh  launch-playground-Release.sh  launch-tutorial01_first_window-Debug.sh  launch-tutorial01_first_window-MinSizeRel.sh  launch-tutorial01_first_window-RelWithDebInfo.sh  launch-tutorial01_first_window-Release.sh  launch-tutorial02_red_triangle-Debug.sh  launch-tutorial02_red_triangle-MinSizeRel.sh  launch-tutorial02_red_triangle-RelWithDebInfo.sh  launch-tutorial02_red_triangle-Release.sh  launch-tutorial03_matrices-Debug.sh  launch-tutorial03_matrices-MinSizeRel.sh  launch-tutorial03_matrices-RelWithDebInfo.sh  launch-tutorial03_matrices-Release.sh  launch-tutorial04_colored_cube-Debug.sh  launch-tutorial04_colored_cube-Release.sh  (+74 more)
program3/: CMakeCache.txt  CMakeLists.txt  Makefile  README  cmake_install.cmake  frag.glsl  main.cpp  program3  vert.glsl
(+188 files in other folders)
